untitled/objects/Case_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Case_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Case Team Members</relationshipLabel>
        <relationshipName>Case_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Team Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Team Members</relationshipLabel>
        <relationshipName>Case_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Team Members</pluralLabel>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <description>Person external to the firm</description>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>A case team member belonging to the firm</description>
        <label>Internal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>